# yunda-asr

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  识别修正.md
docs/: api.md  deployment.md  dify_integration.md  integration_guide.md
scripts/: analyze_error_patterns.py  augment_corpus.py  build_asr_testset.py  build_corpus.py  build_lexicon.py  build_qwen3_prompt.py  build_v4_prompt.py  clean_aliases.py  clean_dangerous_aliases.py  compare_prompt_versions.py  console_demo.py  denoise_audio.py  denoise_deepfilternet_py311.py  denoise_final_candidates.py  denoise_tuning.py  evaluate_elevenlabs_denoise.py  evaluate_on_testset.py  evaluate_qwen3_hotwords_chat.py  evaluate_qwen3_pipeline.py  evaluate_qwen3_prompt_tuning.py  evaluate_qwen3_three_directions.py  evaluate_three_directions.py  generate_hotwords.py  generate_qwen3_fewshot_samples.py  gradio_demo.py  merge_prompt_version_reports.py  mine_qwen3_aliases.py  qwen3_local_test.py  retrain_ngram.py  setup_deepfilternet_py311.ps1  start_api.py  update_lexicon.py
src/: __init__.py  alias_manager.py  asr_client.py  audio_preprocessor.py  collocation_rules.py  config.py  context_corrector.py  dictionary_corrector.py  dify_client.py  entity_guard.py  feedback_collector.py  harness_refiner.py  hotword_manager.py  itn_rules.py  knowledge_retriever.py  llm_client.py  logging_config.py  metrics.py  ngram_model.py  phonetic_candidate.py  pipeline.py  preprocessor.py  prompt_manager.py  rag_refiner.py  semantic_refiner.py  term_tool.py
tests/: benchmark.py  (+10 more)
(+43 files in other folders)
